--- a/index.html
+++ b/index.html
@@ -63,21 +63,21 @@
         <ul>
           <li>
             <img
-              src="/image/close-up-image-programer-working-his-desk-office_1098-18707.jpeg"
+              src="./image/close-up-image-programer-working-his-desk-office_1098-18707.jpg"
               width="370px"
               alt="programer working"
             />
           </li>
           <li>
             <img
-              src="/image/web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones_8119-2713.jpeg"
+              src="./image/web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones_8119-2713.jpg"
               width="370px"
               alt="web ui designers"
             />
           </li>
           <li>
             <img
-              src="/image/creative-artist-web-design-with-working-colour-selection-graphic-tablet_35674-1119.jpeg"
+              src="./image/creative-artist-web-design-with-working-colour-selection-graphic-tablet_35674-1119.jpg"
               width="370px"
               alt="creative artist"
             />
@@ -88,22 +88,22 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="/image/1.jpeg" width="270px" alt="Product Designer" />
+            <img src="./image/1.jpg" width="270px" alt="Product Designer" />
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="/image/2.jpeg" width="270px" alt="Frontend Developer" />
+            <img src="./image/2.jpg" width="270px" alt="Frontend Developer" />
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="image/3.jpeg" width="270px" alt="Marketing" />
+            <img src="./image/3.jpg" width="270px" alt="Marketing" />
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="image/4.jpeg" width="270px" alt="UI Designer" />
+            <img src="./image/4.jpg" width="270px" alt="UI Designer" />
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
