--- a/index.html
+++ b/index.html
@@ -28,29 +28,30 @@
         <button type="button">Замовити послугу</button>
       </section>
       <section>
+        <h2>Особливості</h2>
         <ul>
           <li>
-            <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
+            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
             <p>
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <h2>ПУНКТУАЛЬНІСТЬ</h2>
+            <h3>ПУНКТУАЛЬНІСТЬ</h3>
             <p>
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <h2>ПЛАНУВАННЯ</h2>
+            <h3>ПЛАНУВАННЯ</h3>
             <p>
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p>
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
@@ -64,21 +65,21 @@
           <li>
             <img
               src="./image/close-up-image-programer-working-his-desk-office_1098-18707.jpg"
-              width="370px"
+              width="370"
               alt="programer working"
             />
           </li>
           <li>
             <img
               src="./image/web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones_8119-2713.jpg"
-              width="370px"
+              width="370"
               alt="web ui designers"
             />
           </li>
           <li>
             <img
               src="./image/creative-artist-web-design-with-working-colour-selection-graphic-tablet_35674-1119.jpg"
-              width="370px"
+              width="370"
               alt="creative artist"
             />
           </li>
@@ -88,22 +89,22 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img src="./image/1.jpg" width="270px" alt="Product Designer" />
+            <img src="./image/1.jpg" width="270" alt="Product Designer" />
             <h3>Ігор Дем'яненко</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./image/2.jpg" width="270px" alt="Frontend Developer" />
+            <img src="./image/2.jpg" width="270" alt="Frontend Developer" />
             <h3>Ольга Рєпіна</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./image/3.jpg" width="270px" alt="Marketing" />
+            <img src="./image/3.jpg" width="270" alt="Marketing" />
             <h3>Микола Тарасов</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./image/4.jpg" width="270px" alt="UI Designer" />
+            <img src="./image/4.jpg" width="270" alt="UI Designer" />
             <h3>Михайло Єрмаков</h3>
             <p>UI Designer</p>
           </li>
