--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -112,12 +112,12 @@
       </section>
     </main>
     <footer>
-      <h2>WebStudio</h2>
+      <a href="./index.html">WebStudio</a>
       <address>
         <ul>
-          <li>м. Київ, пр-т Лесі Українки, 26</li>
-          <li>info@devstudio.com</li>
-          <li>+38 096 111 11 11</li>
+          <li><a href="https://goo.gl/maps/9BAexuXsB6jjKLk17" target="_blank" rel="noopenet noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a></li>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
