--- a/index.html
+++ b/index.html
@@ -1,125 +1,109 @@
 <!DOCTYPE html>
 <html lang="uk">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebStudio</title>
-  </head>
-  <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="">Студія</a></li>
-          <li><a href="">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
-        </ul>
-      </nav>
 
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>WebStudio</title>
+</head>
+
+<body>
+  <header>
+    <nav>
+      <a href="./index.html">WebStudio</a>
       <ul>
+        <li><a href="">Студія</a></li>
+        <li><a href="">Портфоліо</a></li>
+        <li><a href="">Контакти</a></li>
+      </ul>
+    </nav>
+    <ul>
+      <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+    </ul>
+  </header>
+  <main>
+    <section>
+      <h1>Ефективні рішення для вашого бізнесу</h1>
+      <button type="button">Замовити послугу</button>
+    </section>
+    <section>
+      <h2>Особливості</h2>
+      <ul>
+        <li>
+          <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+          <p> Ідейні міркування, і навіть початок повсякденної роботи з формування позиції. </p>
+        </li>
+        <li>
+          <h3>ПУНКТУАЛЬНІСТЬ</h3>
+          <p> Завдання організації, особливо рамки і місце навчання кадрів тягне у себе. </p>
+        </li>
+        <li>
+          <h3>ПЛАНУВАННЯ</h3>
+          <p> Так само консультація з широким активом значною мірою зумовлює. </p>
+        </li>
+        <li>
+          <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+          <p> Значимість цих проблем настільки очевидна, що реалізація планових завдань. </p>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>Чим ми займаємося</h2>
+      <ul>
+        <li>
+          <img src="./image/close-up-image-programer-working-his-desk-office_1098-18707.jpg" width="370"
+            alt="programer working" />
+        </li>
+        <li>
+          <img
+            src="./image/web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones_8119-2713.jpg"
+            width="370" alt="web ui designers" />
+        </li>
+        <li>
+          <img src="./image/creative-artist-web-design-with-working-colour-selection-graphic-tablet_35674-1119.jpg"
+            width="370" alt="creative artist" />
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h2>Наша команда</h2>
+      <ul>
+        <li>
+          <img src="./image/1.jpg" width="270" alt="Product Designer" />
+          <h3>Ігор Дем'яненко</h3>
+          <p>Product Designer</p>
+        </li>
+        <li>
+          <img src="./image/2.jpg" width="270" alt="Frontend Developer" />
+          <h3>Ольга Рєпіна</h3>
+          <p>Frontend Developer</p>
+        </li>
+        <li>
+          <img src="./image/3.jpg" width="270" alt="Marketing" />
+          <h3>Микола Тарасов</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img src="./image/4.jpg" width="270" alt="UI Designer" />
+          <h3>Михайло Єрмаков</h3>
+          <p>UI Designer</p>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <footer>
+    <a href="./index.html">WebStudio</a>
+    <address>
+      <ul>
+        <li><a href="https://goo.gl/maps/9BAexuXsB6jjKLk17" target="_blank" rel="noopenet noreferrer nofollow">м. Київ,
+            пр-т Лесі Українки, 26</a></li>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
-    </header>
-    <main>
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
-      </section>
-      <section>
-        <h2>Особливості</h2>
-        <ul>
-          <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
-          </li>
-          <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
-            </p>
-          </li>
-          <li>
-            <h3>ПЛАНУВАННЯ</h3>
-            <p>
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
-          </li>
-          <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h2>Чим ми займаємося</h2>
-        <ul>
-          <li>
-            <img
-              src="./image/close-up-image-programer-working-his-desk-office_1098-18707.jpg"
-              width="370"
-              alt="programer working"
-            />
-          </li>
-          <li>
-            <img
-              src="./image/web-ui-designers-are-developing-application-smartphones-team-creators-is-working-interface-mobile-phones_8119-2713.jpg"
-              width="370"
-              alt="web ui designers"
-            />
-          </li>
-          <li>
-            <img
-              src="./image/creative-artist-web-design-with-working-colour-selection-graphic-tablet_35674-1119.jpg"
-              width="370"
-              alt="creative artist"
-            />
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
-            <img src="./image/1.jpg" width="270" alt="Product Designer" />
-            <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
-          </li>
-          <li>
-            <img src="./image/2.jpg" width="270" alt="Frontend Developer" />
-            <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./image/3.jpg" width="270" alt="Marketing" />
-            <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img src="./image/4.jpg" width="270" alt="UI Designer" />
-            <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <address>
-        <ul>
-          <li><a href="https://goo.gl/maps/9BAexuXsB6jjKLk17" target="_blank" rel="noopenet noreferrer nofollow">м. Київ, пр-т Лесі Українки, 26</a></li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-      </address>
-    </footer>
-  </body>
+    </address>
+  </footer>
+</body>
+
 </html>
